delete Genre from bd processing